ANIMATION FINIT mise a jour du css

--- a/pages/Le-delice-de-sens.html
+++ b/pages/Le-delice-de-sens.html
@@ -4,108 +4,204 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="" />
-    <title>Le délice de sens</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link href="/FontAnswome/css/all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/.public/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Le délice des sens</title>
   </head>
   <body>
-    <header>
-      <img src="/images/logo/ohmyfood.png " alt="" />
-    </header>
+    <div class="container">
+      <header class="header">
+        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+        <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
+      </header>
 
-    <container class="main">
-      <section class="menu-main">
-        <h1>Le délice de sens</h1>
-
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
-
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
-
-        <article class="article-menu">
-          <h3></h3>
-          <ul>
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu">
-                <h3></h3>
-                <p></p>
-              </div>
-            </li>
-          </ul>
-        </article>
-
-        <button class="commander">comander</button>
+      <section class="image-menu">
+        <img src="/images/restaurants/Le délice des sens.jpg" ; alt="" />
       </section>
 
-      <footer>
-        <img src="/images/logo/ohmyfood.png" alt="" />
-        <ul>
-          <li>Proposer un restaurant</li>
-          <li>Devenir partenaire</li>
-          <li>Mention légales</li>
-          <li>contact</li>
+      <section class="menu-main">
+        <h1 class="titre-shrikhand">
+          Le délice des sens<i class="far fa-heart"></i
+          ><i class="fas fa-heart heart"></i>
+        </h1>
+
+        <ul class="menu-contenu">
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                ENTREES <span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu --no-delay">
+                  <article>
+                    <h3 class="menu-titre">Tartare de thon</h3>
+                    <div class="menu-content">
+                      <p>Assaisonné au yuzu</p>
+                      <span>25€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Bouchée de homard croustillant</h3>
+                    <div class="menu-content">
+                      <p>Et sa farandole de petits légumes</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu --delay-un">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay-un">
+                  <article>
+                    <h3 class="menu-titre">Velouté de cèpes</h3>
+                    <div class="menu-content">
+                      <p>Aux truffes</p>
+                      <span>20€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                PLATS<span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu --no-delay">
+                  <article>
+                    <h3 class="menu-titre">
+                      Poulet rôtie aux herbes de Provence
+                    </h3>
+                    <div class="menu-content">
+                      <p>Et sa crème de truffe</p>
+                      <span>40€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Langouste rôtie</h3>
+                    <div class="menu-content">
+                      <p>Et ses légumes de saison</p>
+                      <span>35€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay-un">
+                  <article>
+                    <h3 class="menu-titre">Côte de boeuf Angus</h3>
+                    <div class="menu-content">
+                      <p>Et sa purée de panais</p>
+                      <span>44€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+          <li>
+            <article class="article-menu">
+              <h3 class="menu-titre-carte">
+                DESSERTS<span class="barre-verte"></span>
+              </h3>
+              <ul class="liste-menu">
+                <li class="menu --no-delay">
+                  <article>
+                    <h3 class="menu-titre">Farandole de desserts</h3>
+                    <div class="menu-content">
+                      <p>Du chef</p>
+                      <span>18€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay">
+                  <article>
+                    <h3 class="menu-titre">Crème brulée</h3>
+                    <div class="menu-content">
+                      <p>Revisitée</p>
+                      <span>22€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+
+                <li class="menu --delay-un">
+                  <article>
+                    <h3 class="menu-titre">Tiramisu</h3>
+                    <div class="menu-content">
+                      <p>A la noisette</p>
+                      <span>23€</span>
+                    </div>
+                  </article>
+                  <button class="btn-menu">
+                    <i class="fas fa-check-circle fa-effet"></i>
+                  </button>
+                </li>
+              </ul>
+            </article>
+          </li>
+        </ul>
+        <button class="btn btn--commander">Commander</button>
+      </section>
+
+      <footer class="footer">
+        <p class="titre-shrikhand --logo-footer">ohmyfood</p>
+        <ul class="liste-footer">
+          <li>
+            <a href="#"
+              ><i class="fas fa-utensils"></i>Proposer un restaurant</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><i class="fas fa-hands-helping"></i>Devenir partenaire</a
+            >
+          </li>
+          <li><a href="#">Mention légales</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
       </footer>
-    </container>
+    </div>
   </body>
 </html>
