--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -27,7 +27,9 @@
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu"></section>
+      <section class="image-menu">
+        <img src="/images/restaurants/La francaise.jpg" ; alt="" />
+      </section>
 
       <section class="menu-main">
         <h1 class="titre-shrikhand">
@@ -42,7 +44,7 @@
                 ENTREES <span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
                     <h3 class="menu-titre">Tartare de poulpe acidulé</h3>
                     <div class="menu-content">
@@ -68,7 +70,7 @@
                   </button>
                 </li>
 
-                <li class="menu --delay">
+                <li class="menu --delay-un">
                   <article>
                     <h3 class="menu-titre">Soupe à l'ognon</h3>
                     <div class="menu-content">
@@ -89,7 +91,7 @@
                 PLATS<span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
                     <h3 class="menu-titre">Coquille Saint-Jacques</h3>
                     <div class="menu-content">
@@ -102,7 +104,7 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
                     <h3 class="menu-titre">Magret de canard</h3>
                     <div class="menu-content">
@@ -115,7 +117,7 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay-un">
                   <article>
                     <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
                     <div class="menu-content">
@@ -136,7 +138,7 @@
                 DESSERTS<span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
                     <h3 class="menu-titre">Pétales de violettes glacés</h3>
                     <div class="menu-content">
@@ -149,7 +151,7 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
                     <h3 class="menu-titre">Fondant au chocolat</h3>
                     <div class="menu-content">
@@ -162,7 +164,7 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay-un">
                   <article>
                     <h3 class="menu-titre">Millefeuille croustillant</h3>
                     <div class="menu-content">
