--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -27,11 +27,13 @@
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu"></section>
+      <section class="image-menu">
+        <img src="/images/restaurants/La note enchantée.jpg" ; alt="" />
+      </section>
 
       <section class="menu-main">
         <h1 class="titre-shrikhand">
-          A la francaise<i class="far fa-heart"></i
+          La note enchantée<i class="far fa-heart"></i
           ><i class="fas fa-heart heart"></i>
         </h1>
 
@@ -42,7 +44,7 @@
                 ENTREES <span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
                     <h3 class="menu-titre">Raviole de foie gras</h3>
                     <div class="menu-content">
@@ -63,12 +65,12 @@
                       <span>35€</span>
                     </div>
                   </article>
-                  <button class="btn-menu --delay">
+                  <button class="btn-menu --delay-un">
                     <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
 
-                <li class="menu --delay">
+                <li class="menu --delay-un">
                   <article>
                     <h3 class="menu-titre">Homard et espuma de potiron</h3>
                     <div class="menu-content">
@@ -80,7 +82,7 @@
                     <i class="fas fa-check-circle fa-effet"></i>
                   </button>
                 </li>
-                <li class="menu --delay">
+                <li class="menu --delay-un">
                   <article>
                     <h3 class="menu-titre">Foie gras de cannard cuit entier</h3>
                     <div class="menu-content">
@@ -101,7 +103,7 @@
                 PLATS<span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
                     <h3 class="menu-titre">Noix de Coquille Saint-Jacques</h3>
                     <div class="menu-content">
@@ -114,11 +116,11 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
-                    <h3 class="menu-titre">Magret de canard</h3>
+                    <h3 class="menu-titre">Langoustine poêlée</h3>
                     <div class="menu-content">
-                      <p>Et parmentier de pommes de terres</p>
+                      <p>Purée de patate douce</p>
                       <span>35€</span>
                     </div>
                   </article>
@@ -127,11 +129,11 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay-un">
                   <article>
-                    <h3 class="menu-titre">Pigeonneau d'Ille-et-Vilaine</h3>
+                    <h3 class="menu-titre">Mijoté de queu de boeuf</h3>
                     <div class="menu-content">
-                      <p>Sur son lit de gnocchis aux légumes</p>
+                      <p>Et riz sauvage aux zeste de citron</p>
                       <span>44€</span>
                     </div>
                   </article>
@@ -148,11 +150,11 @@
                 DESSERTS<span class="barre-verte"></span>
               </h3>
               <ul class="liste-menu">
-                <li class="menu">
+                <li class="menu --no-delay">
                   <article>
-                    <h3 class="menu-titre">Pétales de violettes glacés</h3>
+                    <h3 class="menu-titre">Macaron noisette et chocolat</h3>
                     <div class="menu-content">
-                      <p>Et purée de noisette</p>
+                      <p>Glace au caramel brun et sel de Guerande</p>
                       <span>18€</span>
                     </div>
                   </article>
@@ -161,11 +163,11 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay">
                   <article>
-                    <h3 class="menu-titre">Fondant au chocolat</h3>
+                    <h3 class="menu-titre">Baba au rhum revisité</h3>
                     <div class="menu-content">
-                      <p>Revisité</p>
+                      <p>Avec son coulis de citron</p>
                       <span>22€</span>
                     </div>
                   </article>
@@ -174,11 +176,11 @@
                   </button>
                 </li>
 
-                <li class="menu">
+                <li class="menu --delay-un">
                   <article>
-                    <h3 class="menu-titre">Millefeuille croustillant</h3>
+                    <h3 class="menu-titre">Tarte au citron meringué</h3>
                     <div class="menu-content">
-                      <p>Myrtilles et pâte d'amande</p>
+                      <p>Destructureé</p>
                       <span>23€</span>
                     </div>
                   </article>
