Fin du projet petite retouche du css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -71,14 +71,14 @@
             <li class="li-restaurant">
               <a href="pages/la-palette-du-gout.html">
                 <figure class="card-restaurant">
-                  <img src="images/restaurants/La palette du goût.jpg" alt="" />
+                  <img src="images/restaurants/La-palette-du-goût.jpg" alt="" />
+                  <div class="nouveau">Nouveau</div>
                   <figcaption>
                     <h4>La palette de goût</h4>
                     <p>Ménilmontant</p>
                     <i class="far fa-heart"></i
                     ><i class="fas fa-heart heart"></i>
                   </figcaption>
-                  <span class="nouveau">Nouveau</span>
                 </figure>
               </a>
             </li>
@@ -86,14 +86,14 @@
             <li class="li-restaurant">
               <a href="pages/la-note-enchantee.html">
                 <figure class="card-restaurant">
-                  <img src="images/restaurants/La note enchantée.jpg" alt="" />
+                  <img src="images/restaurants/La-note-enchantée.jpg" alt="" />
+                  <div class="nouveau">Nouveau</div>
                   <figcaption>
                     <h4>La note anchantée</h4>
                     <p>Charonne</p>
                     <i class="far fa-heart"></i
                     ><i class="fas fa-heart heart"></i>
                   </figcaption>
-                  <span class="nouveau">Nouveau</span>
                 </figure>
               </a>
             </li>
@@ -101,7 +101,7 @@
             <li class="li-restaurant">
               <a href="pages/a-la-francaise.html">
                 <figure class="card-restaurant">
-                  <img src="images/restaurants/La francaise.jpg" alt="" />
+                  <img src="images/restaurants/La-francaise.jpg" alt="" />
                   <figcaption>
                     <h4>A la francaise</h4>
                     <p>Cité Rouge</p>
@@ -115,7 +115,7 @@
             <li class="li-restaurant">
               <a href="pages/le-delice-de-sens.html">
                 <figure class="card-restaurant">
-                  <img src="images/restaurants/Le délice des sens.jpg" alt="" />
+                  <img src="images/restaurants/Le-délice-des-sens.jpg" alt="" />
                   <figcaption>
                     <h4>Le délices des sens</h4>
                     <p>Folie-Méricourt</p>
@@ -142,7 +142,7 @@
               >
             </li>
             <li><a href="#">Mention légales</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="mailto:homyfood@gmail.com">contact</a></li>
           </ul>
         </footer>
       </div>
