--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -27,9 +27,9 @@
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu">
-        <img src="/images/restaurants/La francaise.jpg" ; alt="" />
-      </section>
+      <div class="image-menu">
+        <img src="/images/restaurants/La-francaise.jpg" alt="" />
+      </div>
 
       <section class="menu-main">
         <h1 class="titre-shrikhand">
