--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -27,14 +27,14 @@
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu">
-        <img src="/images/restaurants/La note enchantée.jpg" ; alt="" />
-      </section>
+      <div class="image-menu">
+        <img src="/images/restaurants/La-note-enchantée.jpg" alt="" />
+      </div>
 
       <section class="menu-main">
-        <h1 class="titre-shrikhand">
-          La note enchantée<i class="far fa-heart"></i
-          ><i class="fas fa-heart heart"></i>
+        <h1>
+          <span class="titre-shrikhand">La note enchantée</span
+          ><i class="far fa-heart"></i><i class="fas fa-heart heart"></i>
         </h1>
 
         <ul class="menu-contenu">
