--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -27,9 +27,9 @@
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
-      <section class="image-menu">
-        <img src="/images/restaurants/La palette du goût.jpg" ; alt="" />
-      </section>
+      <div class="image-menu">
+        <img src="/images/restaurants/La-palette-du-goût.jpg" alt="" />
+      </div>
 
       <section class="menu-main">
         <h1 class="titre-shrikhand">
