--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link href="/FontAnswome/css/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/.public/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -197,7 +197,7 @@
             >
           </li>
           <li><a href="#">Mention légales</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="mailto:homyfood@gmail.com">contact</a></li>
         </ul>
       </footer>
     </div>
