--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link href="FontAnswome/css/all.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -142,7 +142,7 @@
               >
             </li>
             <li><a href="#">Mention légales</a></li>
-            <li><a href="mailto:homyfood@gmail.com">contact</a></li>
+            <li><a href="mailto:homyfood@gmail.com">Contact</a></li>
           </ul>
         </footer>
       </div>
