--- a/pages/Le-delice-de-sens.html
+++ b/pages/Le-delice-de-sens.html
@@ -32,9 +32,9 @@
       </div>
 
       <section class="menu-main">
-        <h1 class="titre-shrikhand">
-          Le délice des sens<i class="far fa-heart"></i
-          ><i class="fas fa-heart heart"></i>
+        <h1>
+          <span class="titre-shrikhand"> Le délice des sens</span
+          ><i class="far fa-heart"></i><i class="fas fa-heart heart"></i>
         </h1>
 
         <ul class="menu-contenu">
@@ -199,7 +199,7 @@
             >
           </li>
           <li><a href="#">Mention légales</a></li>
-          <li><a href="mailto:homyfood@gmail.com">contact</a></li>
+          <li><a href="mailto:homyfood@gmail.com">Contact</a></li>
         </ul>
       </footer>
     </div>
