--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -209,7 +209,7 @@
             >
           </li>
           <li><a href="#">Mention légales</a></li>
-          <li><a href="mailto:homyfood@gmail.com">contact</a></li>
+          <li><a href="mailto:homyfood@gmail.com">Contact</a></li>
         </ul>
       </footer>
     </div>
