--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="main">
         <section class="search-restaurant">
           <div class="localisation">
-            <i class="fas fa-map-marker-alt"></i>Paris,Belleville
+            <i class="fas fa-map-marker-alt"></i>Paris,<span>Belleville</span>
           </div>
           <h2>Réserver le menu qui vous convient</h2>
           <p>
