--- a/pages/Le-delice-de-sens.html
+++ b/pages/Le-delice-de-sens.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link href="/FontAnswome/css/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
