--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link href="/FontAnswome/css/all.css" rel="stylesheet" />
+    <link href="./../FontAnswome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="./../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
