MAJ link des images des pages restaurant

--- a/pages/Le-delice-de-sens.html
+++ b/pages/Le-delice-de-sens.html
@@ -28,7 +28,7 @@
       </header>
 
       <div class="image-menu">
-        <img src="/images/restaurants/Le-délice-des-sens.jpg" alt="" />
+        <img src="./../images/restaurants/Le-délice-des-sens.jpg" alt="" />
       </div>
 
       <section class="menu-main">
