--- a/pages/a-la-francaise.html
+++ b/pages/a-la-francaise.html
@@ -28,7 +28,7 @@
       </header>
 
       <div class="image-menu">
-        <img src="/images/restaurants/La-francaise.jpg" alt="" />
+        <img src="./../images/restaurants/La-francaise.jpg" alt="" />
       </div>
 
       <section class="menu-main">
