--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -28,7 +28,7 @@
       </header>
 
       <div class="image-menu">
-        <img src="/images/restaurants/La-palette-du-goût.jpg" alt="" />
+        <img src="./../images/restaurants/La-palette-du-goût.jpg" alt="" />
       </div>
 
       <section class="menu-main">
