--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -28,7 +28,7 @@
       </header>
 
       <div class="image-menu">
-        <img src="/images/restaurants/La-note-enchantée.jpg" alt="" />
+        <img src="./../images/restaurants/La-note-enchantée.jpg" alt="" />
       </div>
 
       <section class="menu-main">
