--- a/pages/Le-delice-de-sens.html
+++ b/pages/Le-delice-de-sens.html
@@ -23,7 +23,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="./../index.html"><i class="fas fa-arrow-left"></i></a>
         <p class="logo logo--restaurant titre-shrikhand">ohmyfood</p>
       </header>
 
